--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
+  
   <body>
+    <h2>Instructions</h2>
+    <p>Q: quits the application 
+       J: Toggles Plane Pathing 
+       M: Toggles Arrow Control Scheme
+       H: Hides WayPoints
+       Space: Shoots a projectile
+    </p>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
