--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   
   <body>
     <h2>Instructions</h2>
-    <p>Q: quits the application 
-       J: Toggles Plane Pathing 
-       M: Toggles Arrow Control Scheme
-       H: Hides WayPoints
-       Space: Shoots a projectile
+    <p>Q: quits the application <br>
+       J: Toggles Plane Pathing <br>
+       M: Toggles Arrow Control Scheme <br>
+       H: Hides WayPoints <br>
+       Space: Shoots a projectile <br>
     </p>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
